--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 p{
-  justify-content:center;
-  align-items:center;
+  margin-left:auto;
+  margin-right:auto;
   
 }
 
-.containter{
-  display:flex;
-  flex-direction: row;
-}
-
-.tools-text{
-  flex-direction: row;
-}
