--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-p{
-  margin-left:auto;
-  margin-right:auto;
-  
+.container{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  gap:10px;
+ max-width: fit-content;
 }
 
